- Added address to footer\n- Fixed top header size

--- a/_partials/footer.html
+++ b/_partials/footer.html
@@ -15,6 +15,16 @@
                 </p>
             </div>
 
+            <div class="col-lg-4">
+                <h4>Contact</h4>
+                <p>
+                Rugjer Boshkovikj 16</br>
+                PO BOX 393</br>
+                1000 Skopje, R. Macedonia</br>
+                <a href="mailto:ict-act@finki.ukim.mk">ict-act@finki.ukim.mk</a>
+                </p>
+            </div>
+
         </div>
 
     </div>
