--- a/_partials/nav.html
+++ b/_partials/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <div class="logo">
-              <a class="navbar-brand" href="/"><img src="images/logo.png" alt="ict-act-logo" /> <h1>ICT-ACT</h1></a>
+              <a href="/"><img src="images/logo.png" alt="ict-act-logo" /> <h1>ICT-ACT</h1></a>
             </div>
         </div>
         <div class="navbar-collapse collapse">
