--- a/_partials/nav.html
+++ b/_partials/nav.html
@@ -8,18 +8,20 @@
                 <span class="icon-bar"></span>
             </button>
             <div class="logo">
-              <a href="/"><img src="images/logo.png" alt="ict-act-logo" /> <h1>ICT-ACT</h1></a>
+              <a href="/"><img src="/images/logo.png" alt="ict-act-logo" /> <h1>ICT-ACT</h1></a>
             </div>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li role="presentation"><a href="index.html#about" {% is index.html %}class="active"{% endis %}>About</a>
+                <li role="presentation"><a href="/index.html#about" {% is index.html %}class="active"{% endis %}>About</a>
                 </li>
-                <li role="presentation"><a href="news.html" {% is news.html %}class="active"{% endis %}>News</a>
+                <li role="presentation"><a href="/news.html" {% is news.html %}class="active"{% endis %}>News</a>
                 </li>
-                <li role="presentation"><a href="files/Statut-Final_2013.pdf">Legislative</a>
+                <li role="presentation"><a href="/files/Statut-Final_2013.pdf">Legislative</a>
                 </li>
-                <li role="presentation"><a href="files/Organi_2012_2014.pdf">Management</a>
+                <li role="presentation"><a href="/files/Organi_2012_2014.pdf">Management</a>
+                </li>
+                <li role="presentation"><a href="/payment/index.php/fee">Membership</a>
                 </li>
             </ul>
         </div>
