--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container posts">
         <div class="row">
             <div class="col-lg-12">
                 <h2 id="about">Association for Information and Communication Technologies ICT-ACT</h2>
